Bug #23210 Race condition during NR between setLcpActiveStatus and COPY_GCI
Submitted: 12 Oct 2006 13:40 Modified: 2 Nov 2006 11:07
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[12 Oct 2006 13:40] Jonas Oreland
Description:
 

How to repeat:
i=1; while true; do echo "XXXX $i"; ndb_mgm -e "all error 7998"; ndb_mgm -e "2 4 restart
-a"; ndb_waiter ; ndb_mgm -e "all error 7998"; ndb_mgm -e "3 5 restart -a"; ndb_waiter ;
i=`expr $i + 1`; done

Suggested fix:
[12 Oct 2006 14:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13591

ChangeSet@1.2551, 2006-10-12 14:02:48+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#23210
    Fix race-condition between COPY_GCIREQ (GCP) and lcpSetActiveStatusEnd
    Solution is _not_ to copy sysfileData from COPY_GCIREQ from "self"
[12 Oct 2006 14:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/13597

ChangeSet@1.2064, 2006-10-12 14:26:53+02:00, jonas@perch.ndb.mysql.com +2 -0
  ndb - bug#23210
      Fix race-condition between COPY_GCIREQ (GCP) and lcpSetActiveStatusEnd
      Solution is _not_ to copy sysfileData from COPY_GCIREQ from "self"
  
    recommit in mysql-5.1-wl2325-5.0
[25 Oct 2006 8:46] Jonas Oreland
pushed into 4.1-ndb
[1 Nov 2006 15:28] Jonas Oreland
pushed into 4.1.22
[1 Nov 2006 15:50] Jonas Oreland
pushed into 5.0.29
[1 Nov 2006 15:57] Jonas Oreland
pushed into 5.1.13
[2 Nov 2006 11:07] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 4.1.22/5.0.29/5.1.13.
[4 Nov 2006 4:33] Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*