ndb - bug#23210   Fix race-condition between COPY_GCIREQ (GCP) and lcpSetActiveStatusEnd   Solution is _not_ to copy sysfileData from COPY_GCIREQ from "self"